--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "test": "truffle test --migrations_directory ./migrations/empty",
     "start": "./scripts/ganache.sh",
     "migrate": "truffle migrate --network local",
-    "migrate-ropsten": "truffle migrate --network ropsten",
+    "migrate-rinkeby": "truffle migrate --network rinkeby",
     "session": "zos session --from $ADMIN_ADDRESS --network local --expires 7200",
-    "session-ropsten": "zos session --from $ADMIN_ADDRESS --network ropsten --expires 7200",
+    "session-rinkeby": "zos session --from $ADMIN_ADDRESS --network rinkeby --expires 7200",
     "push": "zos push",
     "update-all": "zos update --all",
     "push-and-update": "yarn push && yarn update-all && zos-truffle-merge -n 1234 zos.dev-1234.json",
@@ -20,11 +20,12 @@
   },
   "dependencies": {
     "chalk": "^2.4.2",
+    "eth-gas-reporter": "^0.2.0",
     "ganache-cli": "^6.2.5",
     "openzeppelin-eth": "^2.1.3",
     "shelljs": "^0.8.3",
     "truffle": "^5.0.1",
-    "truffle-deploy-registry": "^0.5.0",
+    "truffle-deploy-registry": "^0.5.1",
     "truffle-hdwallet-provider": "^1.0.0-web3one.5",
     "zos": "^2.1.0",
     "zos-lib": "^2.2.1",
